# python-gqrx-client

./: .gitignore  pyproject.toml
.github/workflows/: python-publish.yml
src/: main.py
src/gqrx_client/: client.py
src/gqrx_client/transport/: transport.py
